--- a/image_classification/exploration.ipynb
+++ b/image_classification/exploration.ipynb
@@ -82,8 +82,434 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
+   "source": [
+    "torch.set_float32_matmul_precision(\"medium\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-08T16:38:32.445368700Z",
+     "start_time": "2024-06-08T16:38:32.437368500Z"
+    }
+   },
+   "id": "936c1daf3c884602"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 42\n",
+      "C:\\Users\\George Tzoupis\\anaconda3\\envs\\ailab\\lib\\site-packages\\lightning\\pytorch\\utilities\\parsing.py:197: UserWarning: Attribute 'model' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['model'])`.\n",
+      "  rank_zero_warn(\n",
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "Loading `train_dataloader` to estimate number of stepping batches.\n",
+      "\n",
+      "  | Name       | Type             | Params\n",
+      "------------------------------------------------\n",
+      "0 | classifier | ResNetClassifier | 1.2 M \n",
+      "------------------------------------------------\n",
+      "1.2 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "1.2 M     Total params\n",
+      "4.920     Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Sanity Checking: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "efdbda83726e48bfa39651fb78683042"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Training: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "7b1728fced8546a687ad51fa76cfc958"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "8a456b9952e846d59a4aab18f4fc269b"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "66354a4ea1b54946a781c6500b01e6b6"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "263b4adc284f4a0d9ea1a5446b064d0f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b626759125494a7d9ffd02390a054b77"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "c1c7b0baf6cc4e548c6db663ae82fb04"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "2651641bfa9241988b5ba6520cc63a0e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "3730f69a7f924b4db33bc3c8a94ab4eb"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "cd5dd1a0ca144a47954a7c37fe1d40ed"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "26cc8a6d5ee54cdeaee1fe4acfbbc59e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "5050b4240f7e43b79d5c421c21eb22fc"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=10` reached.\n",
+      "C:\\Users\\George Tzoupis\\anaconda3\\envs\\ailab\\lib\\site-packages\\lightning\\pytorch\\utilities\\parsing.py:197: UserWarning: Attribute 'model' is an instance of `nn.Module` and is already saved during checkpointing. It is recommended to ignore them using `self.save_hyperparameters(ignore=['model'])`.\n",
+      "  rank_zero_warn(\n",
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "Loading `train_dataloader` to estimate number of stepping batches.\n",
+      "\n",
+      "  | Name       | Type             | Params\n",
+      "------------------------------------------------\n",
+      "0 | classifier | ResNetClassifier | 4.9 M \n",
+      "------------------------------------------------\n",
+      "4.9 M     Trainable params\n",
+      "0         Non-trainable params\n",
+      "4.9 M     Total params\n",
+      "19.621    Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      " T-shirt/top       0.73      0.85      0.79      1000\n",
+      "     Trouser       0.99      0.94      0.97      1000\n",
+      "    Pullover       0.66      0.76      0.71      1000\n",
+      "       Dress       0.78      0.87      0.82      1000\n",
+      "        Coat       0.63      0.79      0.70      1000\n",
+      "      Sandal       0.98      0.80      0.88      1000\n",
+      "       Shirt       0.62      0.23      0.33      1000\n",
+      "     Sneaker       0.79      0.95      0.87      1000\n",
+      "         Bag       0.95      0.95      0.95      1000\n",
+      "  Ankle boot       0.93      0.93      0.93      1000\n",
+      "\n",
+      "    accuracy                           0.81     10000\n",
+      "   macro avg       0.81      0.81      0.80     10000\n",
+      "weighted avg       0.81      0.81      0.80     10000\n",
+      "\n",
+      "[[854   1  24  63  14   1  28   1  14   0]\n",
+      " [  0 942   6  34  14   0   2   0   2   0]\n",
+      " [ 14   0 755  13 173   0  39   0   6   0]\n",
+      " [ 43   6   9 868  39   0  33   0   2   0]\n",
+      " [  2   0 112  62 790   0  32   0   2   0]\n",
+      " [  1   0   0   1   0 799   0 169   1  29]\n",
+      " [247   0 223  63 216   0 229   0  22   0]\n",
+      " [  0   0   0   0   0   8   0 955   1  36]\n",
+      " [  2   2   8   6   4   3   6  14 954   1]\n",
+      " [  0   0   0   1   0   2   1  63   2 931]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "Sanity Checking: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "3279389c85df411bb17c37ef392974e3"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Training: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "1586daed5a2645008dc5ef165fcb0deb"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "043b97b845624ab8b33858ef9c409559"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "75d4e40cdaf442eab316496a7d45b289"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "664382f89d68458d971982555e96b434"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "039cc3aeb1da44b5bc1aac7beae73545"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "856d8e5efb46481d93ca51ffc3d939a6"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "5a3119c037ba4ff8b866d2c698ac3c2d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "f64523527e434a4ba388b0e531829721"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "625c9a6e00ba45bea28c6aa78cc8f808"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "df25151108104915b63855c03cabd016"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": "Validation: 0it [00:00, ?it/s]",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "112e2804bb444922b738c0ec0eb6e4a0"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=10` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      " T-shirt/top       0.81      0.77      0.79      1000\n",
+      "     Trouser       0.99      0.96      0.97      1000\n",
+      "    Pullover       0.82      0.68      0.75      1000\n",
+      "       Dress       0.75      0.90      0.82      1000\n",
+      "        Coat       0.66      0.84      0.74      1000\n",
+      "      Sandal       0.97      0.91      0.94      1000\n",
+      "       Shirt       0.62      0.49      0.55      1000\n",
+      "     Sneaker       0.89      0.92      0.91      1000\n",
+      "         Bag       0.97      0.95      0.96      1000\n",
+      "  Ankle boot       0.92      0.96      0.94      1000\n",
+      "\n",
+      "    accuracy                           0.84     10000\n",
+      "   macro avg       0.84      0.84      0.84     10000\n",
+      "weighted avg       0.84      0.84      0.84     10000\n",
+      "\n",
+      "[[765   2  15 115  10   1  82   1   9   0]\n",
+      " [  1 959   3  30   5   0   0   0   2   0]\n",
+      " [ 14   2 680  12 185   0 107   0   0   0]\n",
+      " [ 19   4   3 900  38   0  36   0   0   0]\n",
+      " [  1   1  48  57 840   0  52   0   1   0]\n",
+      " [  1   0   0   0   0 911   0  74   0  14]\n",
+      " [139   3  73  84 194   1 490   0  16   0]\n",
+      " [  0   0   0   0   0  16   0 921   0  63]\n",
+      " [  1   2   3   7   5   3  17   5 955   2]\n",
+      " [  0   0   0   2   0   5   0  32   0 961]]\n"
+     ]
+    }
+   ],
    "source": [
     "pl.seed_everything(42, True)\n",
     "\n",
@@ -143,9 +569,9 @@
     "    tb_logger = pl_loggers.TensorBoardLogger(save_dir='./results',\n",
     "                                             name=experiment_name,\n",
     "                                             sub_dir=model.classifier.__class__.__name__)\n",
-    "    trainer = pl.Trainer(max_epochs=4,\n",
-    "                         limit_train_batches=10,\n",
-    "                         limit_val_batches=10,\n",
+    "    trainer = pl.Trainer(max_epochs=10,\n",
+    "                         # limit_train_batches=10,\n",
+    "                         # limit_val_batches=10,\n",
     "                         callbacks=[\n",
     "                             checkpoint_callback,\n",
     "                         ],\n",
@@ -160,7 +586,11 @@
     "    show_classification_results(test_dl, model, test_dl.dataset.classes)\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-08T17:01:29.422415800Z",
+     "start_time": "2024-06-08T16:39:05.377609700Z"
+    }
    },
    "id": "c10f9d58693f3c15"
   },
