Added option to use fft input in Resnet

--- a/image_classification/exploration.ipynb
+++ b/image_classification/exploration.ipynb
@@ -81,26 +81,26 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "pl.seed_everything(42, True)\n",
-    "\n",
-    "train_dl, valid_dl, test_dl = FashionMNIST.get_dataloaders(batch_size=16,\n",
-    "                                                           pin_memory=True,\n",
-    "                                                           num_workers=4,\n",
-    "                                                           persistent_workers=True)\n",
-    "n_classes = len(train_dl.dataset.classes)\n",
-    "\n",
     "param_grid = {\n",
     "    'n_features': [\n",
     "        # (4, 8, 16, 32, 64),\n",
     "        # (8, 16, 32, 64, 128),\n",
     "        (16, 32, 64, 128, 256),\n",
     "    ],\n",
-    "    'groups': [2, 4],\n",
     "    'lr': [1e-3],\n",
     "    'wd': [1e-5],\n",
+    "    'batch_sz': [32, 64, 128]\n",
     "}\n",
     "\n",
     "for params in ParameterGrid(param_grid):\n",
+    "    pl.seed_everything(42, True)\n",
+    "\n",
+    "    train_dl, valid_dl, test_dl = FashionMNIST.get_dataloaders(batch_size=params['batch_sz'],\n",
+    "                                                               pin_memory=True,\n",
+    "                                                               num_workers=4,\n",
+    "                                                               persistent_workers=True)\n",
+    "    n_classes = len(train_dl.dataset.classes)\n",
+    "\n",
     "    # Select classification model:\n",
     "\n",
     "    # classifier = MLPClassifier(\n",
@@ -128,7 +128,7 @@
     "        n_classes=n_classes,\n",
     "        n_features=params[\"n_features\"],\n",
     "        n_hidden_layers=128,\n",
-    "        conv_groups=params[\"groups\"],\n",
+    "        use_fft_input=True,\n",
     "        init_weights=True,\n",
     "    )\n",
     "\n",
@@ -148,7 +148,7 @@
     "        save_last=True,\n",
     "    )\n",
     "\n",
-    "    experiment_name = f\"Resnet-groups{params['groups']}-{len(params['n_features'])}-layers\"\n",
+    "    experiment_name = f\"Resnet-batch_sz-{params['batch_sz']}-layers\"\n",
     "    # experiment_name = f\"Testing / Refactor\"\n",
     "    tb_logger = pl_loggers.TensorBoardLogger(save_dir='./results',\n",
     "                                             name=experiment_name,\n",
